(refactor) mudando nomes de classes no index.html

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -100,7 +100,7 @@
 
         <div class="servicos-grid">
             <div class="servico-card">
-                <span class="icone-circulo">
+                <span class="icone-circulo cadastro">
                     <img src="assets/servicos/servicos-roxo/cadastro_unificado_roxo.svg" alt="">
                 </span>
                 <h3>Cadastro Unificado</h3>
@@ -108,14 +108,14 @@
             </div>
 
             <div class="servico-card">
-                <span class="icone-circulo">
+                <span class="icone-circulo chat">
                     <img src="assets/servicos/servicos-roxo/chat_integrado_roxo.svg" alt="">
                 </span>
                 <h3>Chat Integrado</h3>
                 <p>Comunique-se de forma rápida e segura com indústrias e coletores pelo chat do app.</p>
             </div>
 
-            <div class="servico-card">
+            <div class="servico-card indicadores">
                 <span class="icone-circulo">
                     <img src="assets/servicos/servicos-roxo/indicadores_impacto_roxo.svg" alt="">
                 </span>
@@ -124,7 +124,7 @@
             </div>
 
             <div class="servico-card">
-                <span class="icone-circulo">
+                <span class="icone-circulo negociacao">
                     <img src="assets/servicos/servicos-roxo/negociacao_direta_roxo.svg" alt="">
                 </span>
                 <h3>Negociação Direta</h3>
@@ -132,7 +132,7 @@
             </div>
 
             <div class="servico-card">
-                <span class="icone-circulo">
+                <span class="icone-circulo relatorios">
                     <img src="assets/servicos/servicos-roxo/relatorios_automaticos_roxo.svg" alt="">
                 </span>
                 <h3>Relatórios Automáticos</h3>
@@ -140,7 +140,7 @@
             </div>
 
             <div class="servico-card">
-                <span class="icone-circulo">
+                <span class="icone-circulo gestao">
                     <img src="assets/servicos/servicos-roxo/gestao_demanda_roxo.svg" alt="">
                 </span>
                 <h3>Gestão de Demanda</h3>
@@ -291,9 +291,9 @@
 
         <div class="footer-col">
             <h4>Contato</h4>
-            <div class="social-icons">
-                <a href="#"><img src="assets/purpura/instagram_purpura.svg" alt="Instagram"></a>
-                <a href="mailto:purpuraambiental4@gmail.com" title="E-mail">
+            <div class="sociais">
+                <a href=""><img src="assets/purpura/instagram_purpura.svg" alt="Instagram"></a>
+                <a href="mailto:purpuraambiental4@gmail.com">
                     <img src="assets/purpura/contato_purpura.svg" alt="E-mail">
                 </a>
             </div>
@@ -301,8 +301,8 @@
 
         <div class="footer-col">
             <h4>Acesso Restrito</h4>
-            <a href="login.jsp" class="secret" title="Área Privada">
-                <img src="assets/purpura/area_restrita.svg" alt="">Área do Administrador
+            <a href="login.jsp" class="crud">
+                <img src="assets/purpura/area_restrita.svg" alt="Cadeado de área restrita">Área do Administrador
             </a>
         </div>
 
