(remove) Deleta arquivos inutilizados e arruma hierarquia das pastas.

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -6,8 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PurPura | Sustentabilidade e Compromisso com o Futuro</title>
     <link rel="shortcut icon" href="assets/purpura/icone_purpura.svg">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="texto.css">
+    <link rel="stylesheet" href="../styles/resets.css">
+    <link rel="stylesheet" href="../styles/hero.css">
+    <link rel="stylesheet" href="../styles/content.css">
+    <link rel="stylesheet" href="../styles/benefits.css">
+    <link rel="stylesheet" href="../styles/cards.css">
+    <link rel="stylesheet" href="../styles/faq.css">
+    <link rel="stylesheet" href="../styles/plans.css">
+    <link rel="stylesheet" href="../styles/services.css">
+    <link rel="stylesheet" href="../styles/responsivity.css">
+    <link rel="stylesheet" href="../styles/texto.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <!-- Colocando a classe inter no body para padronizar a fonte do site. -->
 <body class="inter">
@@ -28,7 +37,7 @@
                 </ul>
             </nav>
 
-            <div class="autenticacao">
+            <div class="auth">
                 <a class="login" href="login.jsp">Login</a>
                 <a class="cadastro" href="cadastro.html">Cadastro</a>
             </div>
