--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -24,7 +24,7 @@
         <!-- Classe container que armazena a navbar e autenticação. -->
         <div class="container nav-container">
             <a href="index.html" class="logo">
-                <img src="assets/purpura/logo_purpura.svg" alt="Logo da PurPura Ambiental">
+                <img src="../assets/purpura/logo_purpura.svg" alt="Logo da PurPura Ambiental">
             </a>
 
             <nav class="main-nav">
@@ -61,7 +61,7 @@
             </div>
 
             <div class="hero-right">
-                <img class="decor" src="assets/purpura/decoracao_purpura.png" alt="Imagem ilustrativa do aplicativo"
+                <img class="decor" src="../assets/purpura/decoracao_purpura.png" alt="Imagem ilustrativa do aplicativo"
                     width="600" height="auto">
             </div>
         </section>
@@ -74,7 +74,7 @@
 
         <div class="conteudo-secao">
             <div class="container-imagem">
-                <img src="assets/purpura/flor.jpg" alt="Imagem de uma flor roxa" class="imagem">
+                <img src="../assets/purpura/flor.jpg" alt="Imagem de uma flor roxa" class="imagem">
             </div>
             <div class="texto-secao">
                 <h2>Quem é a <span class="destaque-roxo">PurPura</span>?</h2>
@@ -90,7 +90,7 @@
 
         <div class="conteudo-secao">
             <div class="container-imagem">
-                <img src="assets/purpura/ecofriendly.jpeg" alt="Sustentabilidade Industrial" class="imagem">
+                <img src="../assets/purpura/ecofriendly.jpeg" alt="Sustentabilidade Industrial" class="imagem">
             </div>
             <div class="texto-secao">
                 <h2>Por que escolher a <span class="destaque-roxo">PurPura</span>?</h2>
@@ -113,7 +113,7 @@
         <div class="servicos-grid">
             <div class="servico-card">
                 <span class="icone-circulo cadastro">
-                    <img src="assets/servicos/servicos-roxo/cadastro_unificado_roxo.svg" alt="">
+                    <img src="../assets/servicos/servicos-roxo/cadastro_unificado_roxo.svg" alt="">
                 </span>
                 <h3>Cadastro Unificado</h3>
                 <p>Cadastre-se como Gerador ou Aproveitador com interface simples e intuitiva.</p>
@@ -121,7 +121,7 @@
 
             <div class="servico-card">
                 <span class="icone-circulo chat">
-                    <img src="assets/servicos/servicos-roxo/chat_integrado_roxo.svg" alt="">
+                    <img src="../assets/servicos/servicos-roxo/chat_integrado_roxo.svg" alt="">
                 </span>
                 <h3>Chat Integrado</h3>
                 <p>Comunique-se de forma rápida e segura com indústrias e coletores pelo chat do app.</p>
@@ -129,7 +129,7 @@
 
             <div class="servico-card indicadores">
                 <span class="icone-circulo">
-                    <img src="assets/servicos/servicos-roxo/indicadores_impacto_roxo.svg" alt="">
+                    <img src="../assets/servicos/servicos-roxo/indicadores_impacto_roxo.svg" alt="">
                 </span>
                 <h3>Indicadores de Impacto</h3>
                 <p>Acompanhe seu impacto ambiental e ganhos financeiros em tempo real.</p>
@@ -137,7 +137,7 @@
 
             <div class="servico-card">
                 <span class="icone-circulo negociacao">
-                    <img src="assets/servicos/servicos-roxo/negociacao_direta_roxo.svg" alt="">
+                    <img src="../assets/servicos/servicos-roxo/negociacao_direta_roxo.svg" alt="">
                 </span>
                 <h3>Negociação Direta</h3>
                 <p>Negocie valores e condições diretamente com empresas interessadas na coleta.</p>
@@ -145,7 +145,7 @@
 
             <div class="servico-card">
                 <span class="icone-circulo relatorios">
-                    <img src="assets/servicos/servicos-roxo/relatorios_automaticos_roxo.svg" alt="">
+                    <img src="../assets/servicos/servicos-roxo/relatorios_automaticos_roxo.svg" alt="">
                 </span>
                 <h3>Relatórios Automáticos</h3>
                 <p>Receba relatórios compatíveis com o PGRS, atendendo exigências legais.</p>
@@ -153,7 +153,7 @@
 
             <div class="servico-card">
                 <span class="icone-circulo gestao">
-                    <img src="assets/servicos/servicos-roxo/gestao_demanda_roxo.svg" alt="">
+                    <img src="../assets/servicos/servicos-roxo/gestao_demanda_roxo.svg" alt="">
                 </span>
                 <h3>Gestão de Demanda</h3>
                 <p>Gerencie sua demanda e encontre fornecedores confiáveis de matéria-prima.</p>
@@ -177,7 +177,7 @@
             </ul>
         </div>
         <div class="beneficios-right">
-            <img src="assets/purpura/decoracao_beneficios.svg" alt="">
+            <img src="../assets/purpura/decoracao_beneficios.svg" alt="">
         </div>
     </section>
 
@@ -305,9 +305,9 @@
         <div class="footer-col">
             <h4>Contato</h4>
             <div class="sociais">
-                <a href=""><img src="assets/purpura/instagram_purpura.svg" alt="Instagram"></a>
+                <a href=""><img src="../assets/purpura/instagram_purpura.svg" alt="Instagram"></a>
                 <a href="mailto:purpuraambiental4@gmail.com">
-                    <img src="assets/purpura/contato_purpura.svg" alt="E-mail">
+                    <img src="../assets/purpura/contato_purpura.svg" alt="E-mail">
                 </a>
             </div>
         </div>
@@ -315,7 +315,7 @@
         <div class="footer-col">
             <h4>Acesso Restrito</h4>
             <a href="login.jsp" class="crud">
-                <img src="assets/purpura/area_restrita.svg" alt="Cadeado de área restrita">Área do Administrador
+                <img src="../assets/purpura/area_restrita.svg" alt="Cadeado de área restrita">Área do Administrador
             </a>
         </div>
 
