--- a/src/main/webapp/cadastro.html
+++ b/src/main/webapp/cadastro.html
@@ -153,6 +153,7 @@
                 <label for="confirmar-senha">Confirmar Senha</label>
                 <input type="password" id="confirmar-senha" placeholder="Confirme sua senha" required>
                 <span id="confirmar-senha-erro" class="error-message">As senhas não coincidem.</span>
+                <input type="hidden" name="origem" value="crud">
             </div>
             <div class="form-footer">
                 <button type="submit" class="btn-cadastro">Cadastrar</button>
