(feat) Padroniza paleta de cores do site e deleta linhas duplicadas.

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="../styles/responsivity.css">
     <link rel="stylesheet" href="../styles/texto.css">
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../styles/variables.css">
+    <link rel="stylesheet" href="../styles/footer.css">
 </head>
 <!-- Colocando a classe inter no body para padronizar a fonte do site. -->
 <body class="inter">
@@ -48,7 +50,7 @@
         <section class="hero container">
             <!-- Hero: área de destaque da página -->
             <div class="hero-left">
-                <h1>
+                <h1 id="titulo-home">
                     O que sua empresa faz com os resíduos pode mudar o futuro.
                     Você está pronto para isso?
                 </h1>
@@ -62,7 +64,7 @@
 
             <div class="hero-right">
                 <img class="decor" src="../assets/purpura/decoracao_purpura.png" alt="Imagem ilustrativa do aplicativo"
-                    width="600" height="auto">
+                    width="600px" height="auto">
             </div>
         </section>
     </main>
@@ -107,7 +109,7 @@
     <section id="secao-servicos" class="servicos-purpura">
         <header class="servicos-cabecalho">
             <p>— Nossos Serviços —</p>
-            <h2>Explore Nossos Serviços</h2>
+            <h2>Explore Nossos <span>Serviços</span></h2>
         </header>
 
         <div class="servicos-grid">
