(feat) Padroniza cor, exclui style do index e ajusta footer

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -16,9 +16,9 @@
     <link rel="stylesheet" href="../styles/services.css">
     <link rel="stylesheet" href="../styles/responsivity.css">
     <link rel="stylesheet" href="../styles/texto.css">
-    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../styles/variables.css">
     <link rel="stylesheet" href="../styles/footer.css">
+    <link rel="stylesheet" href="../styles/header.css">
 </head>
 <!-- Colocando a classe inter no body para padronizar a fonte do site. -->
 <body class="inter">
@@ -95,7 +95,7 @@
                 <img src="../assets/purpura/ecofriendly.jpeg" alt="Sustentabilidade Industrial" class="imagem">
             </div>
             <div class="texto-secao">
-                <h2>Por que escolher a <span class="destaque-roxo">PurPura</span>?</h2>
+                <h2 class="inter">Por que escolher a <span class="destaque-roxo">PurPura</span>?</h2>
                 <p>
                     A PurPura garante credibilidade e confiabilidade para ambos os lados do negócio, oferecendo
                     comunicação entre colaboradores e funcionalidades essenciais para uma boa relação entre as empresas.
@@ -317,7 +317,8 @@
         <div class="footer-col">
             <h4>Acesso Restrito</h4>
             <a href="login.jsp" class="crud">
-                <img src="../assets/purpura/area_restrita.svg" alt="Cadeado de área restrita">Área do Administrador
+                <img src="../assets/purpura/area_restrita.svg" alt="Cadeado de área restrita">
+                <p>Área do Administrador</p>
             </a>
         </div>
 
