(feat) Ajusta alguns elementos da landing page e atualiza ícone do header (estava com uma falha frustante).

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -26,7 +26,7 @@
         <!-- Classe container que armazena a navbar e autenticação. -->
         <div class="container nav-container">
             <a href="index.html" class="logo">
-                <img src="../assets/purpura/logo_purpura.svg" alt="Logo da PurPura Ambiental">
+                <img src="../assets/purpura/logo_purpuraV2.svg" alt="Logo da PurPura Ambiental">
             </a>
 
             <nav class="main-nav">
@@ -71,7 +71,7 @@
 
     <section id="secao-sobre-nos">
         <header class="sobre-nos-cabecalho">
-            <p>— Sobre nós —</p>
+            <p><strong>— Sobre nós —</strong></p>
         </header>
 
         <div class="conteudo-secao">
@@ -169,7 +169,7 @@
 
     <section id="secao-beneficios" class="beneficios-section">
         <div class="beneficios-left">
-            <h2>Que benefício <br> você obterá</h2>
+            <h2>Quais benefícios você obterá?</h2>
             <ul class="lista-beneficios">
                 <li><span class="check-icon">✔</span> Conformidade Regulatória</li>
                 <li><span class="check-icon">✔</span> Otimização Financeira</li>
