--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PurPura | Sustentabilidade e Compromisso com o Futuro</title>
-    <link rel="shortcut icon" href="assets/purpura/icone_purpura.svg">
+    <link rel="shortcut icon" href="../assets/purpura/icone_purpura.svg">
     <link rel="stylesheet" href="../styles/resets.css">
     <link rel="stylesheet" href="../styles/hero.css">
     <link rel="stylesheet" href="../styles/content.css">
@@ -63,8 +63,7 @@
             </div>
 
             <div class="hero-right">
-                <img class="decor" src="../assets/purpura/decoracao_purpura.png" alt="Imagem ilustrativa do aplicativo"
-                    width="600px" height="auto">
+                <img class="decor" src="../assets/purpura/decoracao_purpura.png" alt="Imagem ilustrativa do aplicativo">
             </div>
         </section>
     </main>
