--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,20 +5,20 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PurPura | Sustentabilidade e Compromisso com o Futuro</title>
-    <link rel="shortcut icon" href="../assets/purpura/icone_purpura.svg">
-    <link rel="stylesheet" href="../styles/resets.css">
-    <link rel="stylesheet" href="../styles/hero.css">
-    <link rel="stylesheet" href="../styles/content.css">
-    <link rel="stylesheet" href="../styles/benefits.css">
-    <link rel="stylesheet" href="../styles/cards.css">
-    <link rel="stylesheet" href="../styles/faq.css">
-    <link rel="stylesheet" href="../styles/plans.css">
-    <link rel="stylesheet" href="../styles/services.css">
-    <link rel="stylesheet" href="../styles/responsivity.css">
-    <link rel="stylesheet" href="../styles/texto.css">
-    <link rel="stylesheet" href="../styles/variables.css">
-    <link rel="stylesheet" href="../styles/footer.css">
-    <link rel="stylesheet" href="../styles/header.css">
+    <link rel="shortcut icon" href="assets/purpura/icone_purpura.svg">
+    <link rel="stylesheet" href="styles/resets.css">
+    <link rel="stylesheet" href="styles/hero.css">
+    <link rel="stylesheet" href="styles/content.css">
+    <link rel="stylesheet" href="styles/benefits.css">
+    <link rel="stylesheet" href="styles/cards.css">
+    <link rel="stylesheet" href="styles/faq.css">
+    <link rel="stylesheet" href="styles/plans.css">
+    <link rel="stylesheet" href="styles/services.css">
+    <link rel="stylesheet" href="styles/responsivity.css">
+    <link rel="stylesheet" href="styles/texto.css">
+    <link rel="stylesheet" href="styles/variables.css">
+    <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="styles/header.css">
 </head>
 <!-- Colocando a classe inter no body para padronizar a fonte do site. -->
 <body class="inter">
@@ -26,7 +26,7 @@
         <!-- Classe container que armazena a navbar e autenticação. -->
         <div class="container nav-container">
             <a href="index.html" class="logo">
-                <img src="../assets/purpura/logo_purpuraV2.svg" alt="Logo da PurPura Ambiental">
+                <img src="assets/purpura/logo_purpuraV2.svg" alt="Logo da PurPura Ambiental">
             </a>
 
             <nav class="main-nav">
@@ -41,7 +41,7 @@
 
             <div class="auth">
                 <a class="login" href="login.jsp">Login</a>
-                <a class="cadastro" href="cadastro.html">Cadastro</a>
+                <a class="cadastro" href="html/cadastro.html">Cadastro</a>
             </div>
         </div>
     </header>
@@ -63,7 +63,7 @@
             </div>
 
             <div class="hero-right">
-                <img class="decor" src="../assets/purpura/decoracao_purpura.png" alt="Imagem ilustrativa do aplicativo">
+                <img class="decor" src="assets/purpura/decoracao_purpura.png" alt="Imagem ilustrativa do aplicativo">
             </div>
         </section>
     </main>
@@ -75,7 +75,7 @@
 
         <div class="conteudo-secao">
             <div class="container-imagem">
-                <img src="../assets/purpura/flor.jpg" alt="Imagem de uma flor roxa" class="imagem">
+                <img src="assets/purpura/flor.jpg" alt="Imagem de uma flor roxa" class="imagem">
             </div>
             <div class="texto-secao">
                 <h2>Quem é a <span class="destaque-roxo">PurPura</span>?</h2>
@@ -91,7 +91,7 @@
 
         <div class="conteudo-secao">
             <div class="container-imagem">
-                <img src="../assets/purpura/ecofriendly.jpeg" alt="Sustentabilidade Industrial" class="imagem">
+                <img src="assets/purpura/ecofriendly.jpeg" alt="Sustentabilidade Industrial" class="imagem">
             </div>
             <div class="texto-secao">
                 <h2 class="inter">Por que escolher a <span class="destaque-roxo">PurPura</span>?</h2>
@@ -114,7 +114,7 @@
         <div class="servicos-grid">
             <div class="servico-card">
                 <span class="icone-circulo cadastro">
-                    <img src="../assets/servicos/servicos-roxo/cadastro_unificado_roxo.svg" alt="">
+                    <img src="assets/servicos/servicos-roxo/cadastro_unificado_roxo.svg" alt="">
                 </span>
                 <h3>Cadastro Unificado</h3>
                 <p>Cadastre-se como Gerador ou Aproveitador com interface simples e intuitiva.</p>
@@ -122,7 +122,7 @@
 
             <div class="servico-card">
                 <span class="icone-circulo chat">
-                    <img src="../assets/servicos/servicos-roxo/chat_integrado_roxo.svg" alt="">
+                    <img src="assets/servicos/servicos-roxo/chat_integrado_roxo.svg" alt="">
                 </span>
                 <h3>Chat Integrado</h3>
                 <p>Comunique-se de forma rápida e segura com indústrias e coletores pelo chat do app.</p>
@@ -130,7 +130,7 @@
 
             <div class="servico-card indicadores">
                 <span class="icone-circulo">
-                    <img src="../assets/servicos/servicos-roxo/indicadores_impacto_roxo.svg" alt="">
+                    <img src="assets/servicos/servicos-roxo/indicadores_impacto_roxo.svg" alt="">
                 </span>
                 <h3>Indicadores de Impacto</h3>
                 <p>Acompanhe seu impacto ambiental e ganhos financeiros em tempo real.</p>
@@ -138,7 +138,7 @@
 
             <div class="servico-card">
                 <span class="icone-circulo negociacao">
-                    <img src="../assets/servicos/servicos-roxo/negociacao_direta_roxo.svg" alt="">
+                    <img src="assets/servicos/servicos-roxo/negociacao_direta_roxo.svg" alt="">
                 </span>
                 <h3>Negociação Direta</h3>
                 <p>Negocie valores e condições diretamente com empresas interessadas na coleta.</p>
@@ -146,7 +146,7 @@
 
             <div class="servico-card">
                 <span class="icone-circulo relatorios">
-                    <img src="../assets/servicos/servicos-roxo/relatorios_automaticos_roxo.svg" alt="">
+                    <img src="assets/servicos/servicos-roxo/relatorios_automaticos_roxo.svg" alt="">
                 </span>
                 <h3>Relatórios Automáticos</h3>
                 <p>Receba relatórios compatíveis com o PGRS, atendendo exigências legais.</p>
@@ -154,7 +154,7 @@
 
             <div class="servico-card">
                 <span class="icone-circulo gestao">
-                    <img src="../assets/servicos/servicos-roxo/gestao_demanda_roxo.svg" alt="">
+                    <img src="assets/servicos/servicos-roxo/gestao_demanda_roxo.svg" alt="">
                 </span>
                 <h3>Gestão de Demanda</h3>
                 <p>Gerencie sua demanda e encontre fornecedores confiáveis de matéria-prima.</p>
@@ -178,7 +178,7 @@
             </ul>
         </div>
         <div class="beneficios-right">
-            <img src="../assets/purpura/decoracao_beneficios.svg" alt="">
+            <img src="assets/purpura/decoracao_beneficios.svg" alt="">
         </div>
     </section>
 
@@ -306,9 +306,9 @@
         <div class="footer-col">
             <h4>Contato</h4>
             <div class="sociais">
-                <a href=""><img src="../assets/purpura/instagram_purpura.svg" alt="Instagram"></a>
+                <a href=""><img src="assets/purpura/instagram_purpura.svg" alt="Instagram"></a>
                 <a href="mailto:purpuraambiental4@gmail.com">
-                    <img src="../assets/purpura/contato_purpura.svg" alt="E-mail">
+                    <img src="assets/purpura/contato_purpura.svg" alt="E-mail">
                 </a>
             </div>
         </div>
@@ -316,7 +316,7 @@
         <div class="footer-col">
             <h4>Acesso Restrito</h4>
             <a href="login.jsp" class="crud">
-                <img src="../assets/purpura/area_restrita.svg" alt="Cadeado de área restrita">
+                <img src="assets/purpura/area_restrita.svg" alt="Cadeado de área restrita">
                 <p>Área do Administrador</p>
             </a>
         </div>
