(refactor) Muda textos da FAQ que não condiziam com o nosso projeto, aumenta tamanho dos ícones do footer.

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -81,8 +81,7 @@
                 <h2>Quem é a <span class="destaque-roxo">PurPura</span>?</h2>
                 <p>
                     Somos uma startup focada em gerenciar resíduos orgânicos, conectando indústrias que geram
-                    desperdício
-                    às que veem nisso uma oportunidade de lucro. Além de reduzir o impacto ambiental, nossa solução
+                    desperdício às que veem nisso uma oportunidade de lucro. Além de reduzir o impacto ambiental, nossa solução
                     transforma resíduos em oportunidades de negócio, com rastreabilidade, eficiência e valor para toda a
                     cadeia.
                 </p>
@@ -248,7 +247,7 @@
                 </label>
                 <div class="faq-resposta">
                     <p>
-                        A PurPura conecta empresas geradoras de resíduos com empresas aproveitadoras,
+                        A PurPura conecta empresas geradoras de resíduos com empresas reaproveitadoras,
                         transformando o que seria lixo em matéria-prima e promovendo sustentabilidade.
                     </p>
                 </div>
@@ -262,8 +261,9 @@
                 </label>
                 <div class="faq-resposta">
                     <p>
-                        Geradores cadastram seus resíduos e aproveitadores buscam materiais de interesse.
-                        O chat e relatórios automáticos garantem comunicação e rastreabilidade.
+                        Geradores cadastram seus resíduos e reaproveitadores buscam resíduos orgânicos de interesse.
+                        O chat promove comunicação mais direta e a possibilidade de negociação interna em relação a entrega. <br>
+                        <strong>Não trabalhamos com transporte.</strong>
                     </p>
                 </div>
             </div>
@@ -276,7 +276,7 @@
                 </label>
                 <div class="faq-resposta">
                     <p>
-                        Trabalhamos com resíduos plásticos, vidros, papéis, metais, orgânicos e até da construção civil.
+                        Gerenciamos apenas resíduos orgânicos e suas categorias <br> (restos de comida, borra de café, folhas).
                     </p>
                 </div>
             </div>
