--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -41,7 +41,7 @@
 
             <div class="auth">
                 <a class="login" href="login.jsp">Login</a>
-                <a class="cadastro" href="html/cadastro.html">Cadastro</a>
+                <a class="cadastro" href="html/cadastro.jsp">Cadastro</a>
             </div>
         </div>
     </header>
