--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -20,15 +20,13 @@
     <link rel="stylesheet" href="../styles/footer.css">
     <link rel="stylesheet" href="../styles/header.css">
 </head>
-<!-- Colocando a classe inter no body para padronizar a fonte do site. -->
+
 <body class="inter">
     <header class="site-header">
-        <!-- Classe container que armazena a navbar e autenticação. -->
         <div class="container nav-container">
             <a href="index.html" class="logo">
                 <img src="../assets/purpura/logo_purpuraV2.svg" alt="Logo da PurPura Ambiental">
             </a>
-
             <nav class="main-nav">
                 <ul>
                     <li><a class="active" href="#home">Home <span class="menu-line"></span></a></li>
@@ -38,17 +36,31 @@
                     <li><a href="#secao-faq">FAQ <span class="menu-line"></span></a></li>
                 </ul>
             </nav>
-
             <div class="auth">
                 <a class="login" href="login.jsp">Login</a>
                 <a class="cadastro" href="cadastro.html">Cadastro</a>
             </div>
+            <div class="menu-hamb">
+                <input type="checkbox" id="hamb-toggle">
+                <label for="hamb-toggle" class="btn-hamb">
+                    <img src="../assets/purpura/menu_linhas.svg" alt="Menu Lateral">
+                </label>
+                <div class="hamb-links">
+                    <a href="#home">Home</a>
+                    <a href="#secao-sobre-nos">Sobre Nós</a>
+                    <a href="#secao-servicos">Serviços</a>
+                    <a href="#secao-planos">Planos</a>
+                    <a href="#secao-faq">FAQ</a>
+                    <div class="hamb-auth">
+                        <a class="login" href="login.jsp">Login</a>
+                        <a class="cadastro" href="cadastro.html">Cadastro</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
-
     <main id="home">
         <section class="hero container">
-            <!-- Hero: área de destaque da página -->
             <div class="hero-left">
                 <h1 id="titulo-home">
                     O que sua empresa faz com os resíduos pode mudar o futuro.
@@ -58,21 +70,17 @@
                     Promovemos a conexão inteligente entre indústrias. Juntos, transformamos o excedente
                     em valor, inovação e um futuro mais limpo!
                 </p>
-                <!-- CTA: Call To Action, botão que o usuário aperta -->
                 <a class="cta" href="#secao-servicos">Saiba Mais</a>
             </div>
-
             <div class="hero-right">
                 <img class="decor" src="../assets/purpura/decoracao_purpura.png" alt="Imagem ilustrativa do aplicativo">
             </div>
         </section>
     </main>
-
     <section id="secao-sobre-nos">
         <header class="sobre-nos-cabecalho">
             <p><strong>— Sobre nós —</strong></p>
         </header>
-
         <div class="conteudo-secao">
             <div class="container-imagem">
                 <img src="../assets/purpura/flor.jpg" alt="Imagem de uma flor roxa" class="imagem">
@@ -81,13 +89,13 @@
                 <h2>Quem é a <span class="destaque-roxo">PurPura</span>?</h2>
                 <p>
                     Somos uma startup focada em gerenciar resíduos orgânicos, conectando indústrias que geram
-                    desperdício às que veem nisso uma oportunidade de lucro. Além de reduzir o impacto ambiental, nossa solução
-                    transforma resíduos em oportunidades de negócio, com rastreabilidade, eficiência e valor para toda a
+                    desperdício às que veem nisso uma oportunidade de lucro. Além de reduzir o impacto ambiental, nossa
+                    solução transforma resíduos em oportunidades de negócio, com rastreabilidade, eficiência e valor
+                    para toda a
                     cadeia.
                 </p>
             </div>
         </div>
-
         <div class="conteudo-secao">
             <div class="container-imagem">
                 <img src="../assets/purpura/ecofriendly.jpeg" alt="Sustentabilidade Industrial" class="imagem">
@@ -103,13 +111,11 @@
             </div>
         </div>
     </section>
-
     <section id="secao-servicos" class="servicos-purpura">
         <header class="servicos-cabecalho">
             <p>— Nossos Serviços —</p>
             <h2>Explore Nossos <span>Serviços</span></h2>
         </header>
-
         <div class="servicos-grid">
             <div class="servico-card">
                 <span class="icone-circulo cadastro">
@@ -118,7 +124,6 @@
                 <h3>Cadastro Unificado</h3>
                 <p>Cadastre-se como Gerador ou Aproveitador com interface simples e intuitiva.</p>
             </div>
-
             <div class="servico-card">
                 <span class="icone-circulo chat">
                     <img src="../assets/servicos/servicos-roxo/chat_integrado_roxo.svg" alt="">
@@ -126,7 +131,6 @@
                 <h3>Chat Integrado</h3>
                 <p>Comunique-se de forma rápida e segura com indústrias e coletores pelo chat do app.</p>
             </div>
-
             <div class="servico-card indicadores">
                 <span class="icone-circulo">
                     <img src="../assets/servicos/servicos-roxo/indicadores_impacto_roxo.svg" alt="">
@@ -134,7 +138,6 @@
                 <h3>Indicadores de Impacto</h3>
                 <p>Acompanhe seu impacto ambiental e ganhos financeiros em tempo real.</p>
             </div>
-
             <div class="servico-card">
                 <span class="icone-circulo negociacao">
                     <img src="../assets/servicos/servicos-roxo/negociacao_direta_roxo.svg" alt="">
@@ -142,7 +145,6 @@
                 <h3>Negociação Direta</h3>
                 <p>Negocie valores e condições diretamente com empresas interessadas na coleta.</p>
             </div>
-
             <div class="servico-card">
                 <span class="icone-circulo relatorios">
                     <img src="../assets/servicos/servicos-roxo/relatorios_automaticos_roxo.svg" alt="">
@@ -150,7 +152,6 @@
                 <h3>Relatórios Automáticos</h3>
                 <p>Receba relatórios compatíveis com o PGRS, atendendo exigências legais.</p>
             </div>
-
             <div class="servico-card">
                 <span class="icone-circulo gestao">
                     <img src="../assets/servicos/servicos-roxo/gestao_demanda_roxo.svg" alt="">
@@ -159,12 +160,10 @@
                 <p>Gerencie sua demanda e encontre fornecedores confiáveis de matéria-prima.</p>
             </div>
         </div>
-
         <div class="servicos-cta">
             <p>Descubra funcionalidades incríveis que aumentam sua produtividade e simplificam a gestão de resíduos.</p>
         </div>
     </section>
-
     <section id="secao-beneficios" class="beneficios-section">
         <div class="beneficios-left">
             <h2>Quais benefícios você obterá?</h2>
@@ -180,18 +179,15 @@
             <img src="../assets/purpura/decoracao_beneficios.svg" alt="">
         </div>
     </section>
-
     <section id="secao-planos" class="planos-section">
         <header class="planos-cabecalho">
             <h2>Escolha o Plano <br> Ideal para Você</h2>
             <p>Escolha o plano que melhor se adapta a você e entre em contato conosco!</p>
         </header>
-
         <div class="planos-seletor">
             <button class="plano-botao active">Mensal</button>
             <button class="plano-botao">Anual</button>
         </div>
-
         <div class="planos-container">
             <div class="plano-card">
                 <h3 class="plano-nome">Free</h3>
@@ -204,7 +200,6 @@
                     <li><span class="plano-check">✔</span> Relatórios financeiros essenciais</li>
                 </ul>
             </div>
-
             <div class="plano-card">
                 <h3 class="plano-nome">Profissional</h3>
                 <p class="plano-preco"><span>R$ 150</span> /Mês</p>
@@ -215,7 +210,6 @@
                     <li><span class="plano-check">✔</span> Documentos legais e certificados</li>
                 </ul>
             </div>
-
             <div class="plano-card plano-destaque">
                 <div class="plano-destaque-label">Mais Popular</div>
                 <h3 class="plano-nome">Company</h3>
@@ -230,14 +224,11 @@
             </div>
         </div>
     </section>
-
     <section id="secao-faq" class="faq-section">
         <header class="faq-cabecalho">
             <p>— FAQ —</p>
             <h2>Perguntas Frequentes</h2>
         </header>
-
-        <!-- FAQ: Frequently Asked Question, seção para responder perguntas frequentes -->
         <div class="faq-container">
             <div class="faq-item">
                 <input type="checkbox" id="faq1" class="faq-toggle">
@@ -252,7 +243,6 @@
                     </p>
                 </div>
             </div>
-
             <div class="faq-item">
                 <input type="checkbox" id="faq2" class="faq-toggle">
                 <label for="faq2" class="faq-pergunta">
@@ -262,12 +252,12 @@
                 <div class="faq-resposta">
                     <p>
                         Geradores cadastram seus resíduos e reaproveitadores buscam resíduos orgânicos de interesse.
-                        O chat promove comunicação mais direta e a possibilidade de negociação interna em relação a entrega. <br>
+                        O chat promove comunicação mais direta e a possibilidade de negociação interna em relação a
+                        entrega. <br>
                         <strong>Não trabalhamos com transporte.</strong>
                     </p>
                 </div>
             </div>
-
             <div class="faq-item">
                 <input type="checkbox" id="faq3" class="faq-toggle">
                 <label for="faq3" class="faq-pergunta">
@@ -276,11 +266,11 @@
                 </label>
                 <div class="faq-resposta">
                     <p>
-                        Gerenciamos apenas resíduos orgânicos e suas categorias <br> (restos de comida, borra de café, folhas).
+                        Gerenciamos apenas resíduos orgânicos e suas categorias <br> (restos de comida, borra de café,
+                        folhas).
                     </p>
                 </div>
             </div>
-
             <div class="faq-item">
                 <input type="checkbox" id="faq4" class="faq-toggle">
                 <label for="faq4" class="faq-pergunta">
@@ -296,13 +286,11 @@
             </div>
         </div>
     </section>
-
     <footer>
         <div class="footer-col">
             <h4>PurPura</h4>
             <p>Gestão de resíduos orgânicos com impacto social e sustentável.</p>
         </div>
-
         <div class="footer-col">
             <h4>Contato</h4>
             <div class="sociais">
@@ -312,7 +300,6 @@
                 </a>
             </div>
         </div>
-
         <div class="footer-col">
             <h4>Acesso Restrito</h4>
             <a href="login.jsp" class="crud">
@@ -320,7 +307,6 @@
                 <p>Área do Administrador</p>
             </a>
         </div>
-
         <p class="footer-bottom">© 2025 PurPura - Todos os direitos reservados</p>
     </footer>
 </body>
