(feat) Adicionando a foto do grupo na landing page

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -83,7 +83,7 @@
         </header>
         <div class="conteudo-secao">
             <div class="container-imagem">
-                <img src="../assets/purpura/flor.jpg" alt="Imagem de uma flor roxa" class="imagem">
+                <img src="../assets/purpura/grupo_purpura.jpeg" alt="Foto do grupo PurPura em conjunto" class="imagem">
             </div>
             <div class="texto-secao">
                 <h2>Quem é a <span class="destaque-roxo">PurPura</span>?</h2>
