(feat) removendo animações desnecessárias

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -332,7 +332,7 @@
         <div class="footer-col">
             <h4>Contato</h4>
             <div class="sociais">
-                <a href=""><img src="../assets/purpura/instagram_purpura.svg" alt="Instagram"></a>
+                <a href="https://www.instagram.com/purpuratec/" target="_blank"><img src="../assets/purpura/instagram_purpura.svg" alt="Instagram"></a>
                 <a href="mailto:purpuraambiental4@gmail.com">
                     <img src="../assets/purpura/contato_purpura.svg" alt="E-mail">
                 </a>
