(feat) - arrumando o cadastro para o direcionamento do crud

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -38,7 +38,7 @@
             </nav>
             <div class="auth">
                 <a class="login" href="login.jsp">Login</a>
-                <a class="cadastro" href="cadastro.html">Cadastro</a>
+                <a class="cadastro" href="cadastro/VerificacaoAdministrador.jsp">Cadastro</a>
             </div>
             <div class="menu-hamb">
                 <input type="checkbox" id="hamb-toggle">
@@ -53,7 +53,7 @@
                     <a href="#secao-faq">FAQ</a>
                     <div class="hamb-auth">
                         <a class="login" href="login.jsp">Login</a>
-                        <a class="cadastro" href="cadastro.html">Cadastro</a>
+                        <a class="cadastro" href="cadastro/VerificacaoAdministrador.jsp">Cadastro</a>
                     </div>
                 </div>
             </div>
