(remove) Remove serviço não implementado no aplicativo

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -116,7 +116,6 @@
             <p>— Nossos Serviços —</p>
             <h2>Explore Nossos <span>Serviços</span></h2>
         </header>
-        
         <div class="servicos-grid">
             <div class="servico-card">
                 <span class="icone-circulo cadastro">
@@ -131,13 +130,6 @@
                 </span>
                 <h3>Chat Integrado</h3>
                 <p>Comunique-se de forma rápida e segura com indústrias e coletores pelo chat do app.</p>
-            </div>
-            <div class="servico-card indicadores">
-                <span class="icone-circulo">
-                    <img src="assets/servicos/servicos-roxo/indicadores_impacto_roxo.svg" alt="">
-                </span>
-                <h3>Indicadores de Impacto</h3>
-                <p>Acompanhe seu impacto ambiental e ganhos financeiros em tempo real.</p>
             </div>
             <div class="servico-card">
                 <span class="icone-circulo negociacao">
@@ -333,7 +325,8 @@
         <div class="footer-col">
             <h4>Contato</h4>
             <div class="sociais">
-                <a href="https://www.instagram.com/purpuratec/" target="_blank"><img src="assets/purpura/instagram_purpura.svg" alt="Instagram"></a>
+                <a href="https://www.instagram.com/purpuratec/" target="_blank"><img
+                        src="assets/purpura/instagram_purpura.svg" alt="Instagram"></a>
                 <a href="mailto:purpuraambiental4@gmail.com">
                     <img src="assets/purpura/contato_purpura.svg" alt="E-mail">
                 </a>
